--- a/guestbook/guestbook-ui-deployment.yaml
+++ b/guestbook/guestbook-ui-deployment.yaml
@@ -13,6 +13,9 @@ spec:
       labels:
         app: guestbook-ui
     spec:
+    type: LoadBalancer
+    ports:
+    - port: 80
       containers:
       - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
         name: guestbook-ui
